test/compile-fail/call__non_callable.he
fn main
{
    let blah = 42;

    blah(); //~ ERROR 3006
    ret 0;
}
